home link update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div class="nav-wrapper">
             <div class="brand-logo">
-                <a href="/">
+                <a href="">
                     <img width="150px" src="static/dm-logo.svg" alt="Duck Address">
                 </a>
             </div>
